package ui;

/**
 * Starting point for Brick Break Game application
 */
public class Main {
    public static void main(String[] args) {
        new BrickBreakFrame();
    }
}
